--- a/.htaccess
+++ b/.htaccess
@@ -5,3 +5,9 @@ RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [QSA,L]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([^.]+)$ $1.html [NC,L]
+
+RewriteCond %{REQUEST_URI} (.*/[^/.]+)($|\?) 
+RewriteRule .* %1/ [R=301,L]
+
+#301 редирект
+Redirect 301 https://transform-p.ru/index https://transform-p.ru/
